--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,4 +20,15 @@ a, a:hover, a:visited {
   text-decoration: none;
 }
 
+.switch-wrapper {
+  position: relative;
+
+  >:first-child ~ * {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+  }
+}
+
 @import "./typography.scss";
